    - 'get-public-key-hash' (use 'public-key-hash' instead)
*** In (ssh channel)
    - 'channel-get-stream (use 'channel-stream' instead)
    - 'channel-set-stream!' (use 'channel-stream-set!' instead)
    - 'channel-get-session' (use 'channel-session' instead)
*** In (ssh message)
    - 'message-get-type'  (use 'message-type' instead)
    - 'message-get-session' (use 'message-session' instead)

* Changes in version 0.10.2 (2016-11-25)
** New procedures
*** New procedure 'channel-send-eof' in (ssh channel)
    The procedure allows to send end-of-file (EOF) on a channel. This action
    doesn't close the channel; you may still read from it but not write.
    'channel-send-eof!' is handy when we deal with a remote command that reads
    data until EOF (such as 'wc'.)
** Documentation
*** Add procedure index
** Misc
*** Fixed several compilation warnings

* Changes in version 0.10.1 (2016-10-09)
** Bugfixes
*** Fix SMOB freeing callbacks
    Callbacks for many Guile-SSH objects would always fail to free allocated
    resources due to wrong check added in 0.10.0.  The problem should be fixed
    now.
** Change default 'guilesitedir' to 'PREFIX/share/guile/site/X.Y'
   from 'PREFIX/share/guile-ssh/ssh/'

* Changes in version 0.10.0 (2016-08-20)
** Add support of Guile 2.0.12
   Guile-SSH now builds (and works quite well, as far as I can see) with Guile
   2.0.9 and 2.0.12.  Unit tests are passing too.

   Tested on:
   - Gentoo GNU/Linux, Guile 2.0.12-r1, libssh 0.7.3
   - Gentoo GNU/Linux, Guile 2.0.9-r1, libssh 0.7.3
** Add support of libssh 0.7.3
   Guile-SSH now supports libssh 0.7.3 and (probably) newer versions; haven't
   tested.

   Note that [[https://www.libssh.org/2016/02/23/libssh-0-7-3-security-and-bugfix-release/][CVE-2016-0739 was found in previous libssh versions]]; though you
   may still use 0.6.4, you really should stick with 0.7.3+ for aforementioned
   reason. 0.7.3 is already should be in your distro's repository, so that