@@ -150,7 +150,7 @@ object (@pxref{Parsing of Requests}).  Throw @code{guile-ssh-error} on
 error.
 @end deffn
 
-@deffn {Scheme Procedure} message-auth-set-methods! message methods-list
+@deffn {Scheme Procedure} message-auth-methods-set! message methods-list
 Set authentication methods to @var{methods-list}.  Possible methods
 are: @code{password}, @code{public-key}, @code{interactive},
 @code{host-based}.  Throw @code{guile-ssh-error} on error.  Return
